--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -4,11 +4,15 @@
 
 <html>
 <head>
-
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Overpass" rel="stylesheet">
 </head>
 <body>
 <div id="container">
-    {% render_bundle 'main' %}
+
 </div>
+{% render_bundle 'main' %}
 </body>
 </html>
