--- a/portfolio/static/webpack_bundles/main.css
+++ b/portfolio/static/webpack_bundles/main.css
@@ -16,10 +16,12 @@ li {
   margin: 10px 0;
   background: white;
   padding: 20px;
-  height: 100%; }
+  height: 100%;
+  overflow-y: scroll; }
 
 .background-gradient {
   background: #f9dfdd;
   background: -webkit-linear-gradient(top, #f9dfdd, white);
   background: linear-gradient(to bottom, #f9dfdd, white);
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
