--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -1,9 +1,47 @@
 .content {
-  margin: 10px 0;
-  background: white;
   padding: 20px;
-  height: 100%;
   overflow-y: scroll;
 }
 
+.text-container {
+  display: inline-block;
+  padding: 20px;
+  text-align: left;
+  background: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Overpass', sans-serif;
 
+  .header {
+    text-transform: uppercase;
+    margin-bottom: -15px;
+  }
+}
+
+.about {
+  background-image: url('/static/img/durer.png');
+  background-size: cover;
+  display: block;
+  text-align: center;
+  height: 400px;
+  border: 1px solid darkblue;
+}
+
+.title-container {
+  position: absolute;
+  top: 0;
+  right: 23px;
+  background: #fff8fb;
+  padding: 5px;
+  border-radius: 4px;
+  z-index: 1;
+  border: 1px solid darkblue;
+
+  p {
+    font-size: 10px;
+    font-family: 'Overpass', italic;
+    margin-bottom: 0;
+  }
+}
