fixing background image problem

--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -21,7 +21,7 @@
 }
 
 .about {
-  background-image: url('/static/img/durer.png');
+  background-image: url('/img/durer.png');
   background-size: cover;
   display: block;
   text-align: center;
