--- a/portfolio/static/webpack_bundles/main.css
+++ b/portfolio/static/webpack_bundles/main.css
@@ -31,7 +31,7 @@ li {
     margin-bottom: -15px; }
 
 .about {
-  background-image: url("/static/img/durer.png");
+  background-image: url("/img/durer.png");
   background-size: cover;
   display: block;
   text-align: center;
