--- a/portfolio/static/css/portfolio.scss
+++ b/portfolio/static/css/portfolio.scss
@@ -2,6 +2,7 @@
 @import 'modules/mixins';
 @import 'components/tabs';
 @import 'components/containers';
+@import 'components/forms';
 
 .background-gradient {
 
