--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -1,5 +1,5 @@
 .content {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   overflow-y: scroll;
 }
 
@@ -24,22 +24,23 @@
   background-size: cover;
   display: block;
   text-align: center;
+  position: relative;
   height: 400px;
   border: 1px solid darkblue;
 
-  &.about {
-    background-image: url('/img/durer.png');
+  .button-container {
+    padding-top: 150px;
   }
+}
 
-  &.contact {
-    background-image: url('/img/caravaggio.png');
-  }
+.selection-container {
+  position: absolute;
 }
 
 .title-container {
   position: absolute;
-  top: 0;
-  right: 23px;
+  top: -17px;
+  right: 7px;
   background: #fff8fb;
   padding: 5px;
   border-radius: 4px;
@@ -48,7 +49,22 @@
 
   p {
     font-size: 10px;
-    font-family: 'Overpass', italic;
     margin-bottom: 0;
   }
+}
+
+.squiggle-container {
+  width: 100px;
+}
+
+.vertsquiggle-container {
+  padding-top: 22px;
+  height: 300px;
+}
+
+.form-container {
+  position: absolute;
+  width: 94%;
+  top: 118px;
+  text-align: center;
 }
