--- a/portfolio/static/css/components/_forms.scss
+++ b/portfolio/static/css/components/_forms.scss
@@ -1,26 +1,27 @@
 form {
   margin-bottom: 0;
+  position: relative;
+
+  p {
+    text-transform: uppercase;
+    color: white;
+    text-align: left;
+    position: absolute;
+    left: 39%;
+    top: -26px;
+  }
 }
 label {
   textarea {
     font-weight: 100;
     font-size: 12px;
     padding: 10px;
-    height: 100px;
+    position: absolute;
+    right: 39%;
+    height: 135px;
     border-radius: 4px;
     display: block;
     border: none;
     background-color: #f7f8ff;
   }
-}
-
-.submit-button {
-  background: #f05f5b;
-  border-radius: 4px;
-  border: none;
-  color: white;
-  text-transform: uppercase;
-  padding: 5px 10px;
-  margin-top: 10px;
-  display: block;
 }
