--- a/portfolio/static/css/portfolio.css
+++ b/portfolio/static/css/portfolio.css
@@ -1,7 +1,31 @@
-nav {
-  padding: 30px 0; }
-  nav ul {
+@keyframes shift {
+  from {
+    transform: translateX(-10%); }
+  to {
+    transform: translateX(-40%); } }
+@keyframes vertshift {
+  from {
+    transform: translateY(-10%); }
+  to {
+    transform: translateY(-40%); } }
+@keyframes shiftTop {
+  50% {
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px); } }
+.nav-tabs {
+  padding: 30px 0;
+  border: none; }
+  .nav-tabs ul {
     padding-left: 0; }
+  .nav-tabs li {
+    padding: 0; }
+    .nav-tabs li a {
+      border: none; }
+  .nav-tabs > li.active a, .nav-tabs li.active a:hover, .nav-tabs li.active a:focus {
+    border: none; }
+  .nav-tabs > li a:hover, .nav-tabs > li a:active, .nav-tabs > li a:focus {
+    background: none;
+    border: none; }
 
 li {
   list-style: none;
@@ -13,7 +37,7 @@ li {
     color: #f05f5b; }
 
 .content {
-  padding: 20px;
+  padding: 20px 20px 0 20px;
   overflow-y: scroll; }
 
 .text-container {
@@ -34,17 +58,19 @@ li {
   background-size: cover;
   display: block;
   text-align: center;
+  position: relative;
   height: 400px;
   border: 1px solid darkblue; }
-  .image-container.about {
-    background-image: url("/img/durer.png"); }
-  .image-container.contact {
-    background-image: url("/img/caravaggio.png"); }
+  .image-container .button-container {
+    padding-top: 150px; }
+
+.selection-container {
+  position: absolute; }
 
 .title-container {
   position: absolute;
-  top: 0;
-  right: 23px;
+  top: -17px;
+  right: 7px;
   background: #fff8fb;
   padding: 5px;
   border-radius: 4px;
@@ -52,42 +78,80 @@ li {
   border: 1px solid darkblue; }
   .title-container p {
     font-size: 10px;
-    font-family: 'Overpass', italic;
     margin-bottom: 0; }
 
+.squiggle-container {
+  width: 100px; }
+
+.vertsquiggle-container {
+  padding-top: 22px;
+  height: 300px; }
+
+.form-container {
+  position: absolute;
+  width: 94%;
+  top: 118px;
+  text-align: center; }
+
 form {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  position: relative; }
+  form p {
+    text-transform: uppercase;
+    color: white;
+    text-align: left;
+    position: absolute;
+    left: 39%;
+    top: -26px; }
 
 label textarea {
   font-weight: 100;
   font-size: 12px;
   padding: 10px;
-  height: 100px;
+  position: absolute;
+  right: 39%;
+  height: 135px;
   border-radius: 4px;
   display: block;
   border: none;
   background-color: #f7f8ff; }
+
+button.contact {
+  border-radius: 4px;
+  color: white;
+  background: #f05f5b;
+  border: none;
+  padding: 7px 10px;
+  text-transform: uppercase;
+  font-family: 'Overpass'; }
 
 .submit-button {
   background: #f05f5b;
   border-radius: 4px;
   border: none;
   color: white;
+  display: block;
+  position: absolute;
+  font-size: 12px;
   text-transform: uppercase;
+  right: 39%;
+  top: 145px;
   padding: 5px 10px;
-  margin-top: 10px;
-  display: block; }
+  font-family: 'Overpass';
+  z-index: 1000; }
+
+.contact .section {
+  background-size: cover;
+  height: 400px;
+  width: 100%;
+  position: absolute;
+  z-index: 998; }
 
 .background-gradient {
   height: 100%;
   overflow: hidden; }
 
-@keyframes shift {
-  from {
-    transform: translateX(-10%); }
-  to {
-    transform: translateX(-40%); } }
-.squiggle-container {
-  width: 100px; }
+p {
+  font-family: 'Overpass', italic; }
 
 /*# sourceMappingURL=portfolio.css.map */
