completed contact for submission

--- a/portfolio/static/css/components/_buttons.scss
+++ b/portfolio/static/css/components/_buttons.scss
@@ -18,8 +18,8 @@ button.contact {
   position: absolute;
   font-size: 12px;
   text-transform: uppercase;
-  right: 39%;
-  top: 145px;
+  right: 0;
+  top: 167px;
   padding: 5px 10px;
   font-family: 'Overpass';
   z-index: 1000;
