working on form submission and message display

--- a/portfolio/static/css/components/_buttons.scss
+++ b/portfolio/static/css/components/_buttons.scss
@@ -14,12 +14,9 @@ button.contact {
   border-radius: 4px;
   border: none;
   color: white;
-  display: block;
-  position: absolute;
   font-size: 12px;
+  margin-top: 10px;
   text-transform: uppercase;
-  right: 0;
-  top: 167px;
   padding: 5px 10px;
   font-family: 'Overpass';
   z-index: 1000;
