--- a/portfolio/static/css/components/_forms.scss
+++ b/portfolio/static/css/components/_forms.scss
@@ -34,3 +34,14 @@ textarea.form-control, .form-group > input.form-control {
   font-family: 'Overpass';
   width: 150px;
 }
+
+.success-message, .error-message {
+  display: none;
+  background: #fff8fb;
+  margin-top: 10px;
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 10px;
+  font-family: 'Overpass';
+  border: 1px solid darkblue;
+}
