--- a/portfolio/static/css/portfolio.css
+++ b/portfolio/static/css/portfolio.css
@@ -93,6 +93,10 @@ li {
   top: 130px;
   text-align: center; }
 
+.submit-button-container {
+  display: block;
+  text-align: right; }
+
 form {
   margin-bottom: 0;
   position: relative;
@@ -123,6 +127,16 @@ textarea.form-control, .form-group > input.form-control {
   font-family: 'Overpass';
   width: 150px; }
 
+.success-message, .error-message {
+  display: none;
+  background: #fff8fb;
+  margin-top: 10px;
+  padding: 5px;
+  border-radius: 4px;
+  font-size: 10px;
+  font-family: 'Overpass';
+  border: 1px solid darkblue; }
+
 button.contact {
   border-radius: 4px;
   color: white;
@@ -137,12 +151,9 @@ button.contact {
   border-radius: 4px;
   border: none;
   color: white;
-  display: block;
-  position: absolute;
   font-size: 12px;
+  margin-top: 10px;
   text-transform: uppercase;
-  right: 0;
-  top: 167px;
   padding: 5px 10px;
   font-family: 'Overpass';
   z-index: 1000; }
