--- a/portfolio/static/css/portfolio.css
+++ b/portfolio/static/css/portfolio.css
@@ -97,6 +97,29 @@ li {
   display: block;
   text-align: right; }
 
+#gallery-container {
+  padding: 50px; }
+
+.object-container {
+  padding: 100px 30px;
+  text-align: center;
+  background-size: cover;
+  font-family: 'Overpass';
+  background-repeat: no-repeat;
+  border: 1px solid darkblue;
+  position: relative; }
+  .object-container .object-title {
+    font-size: 14px;
+    text-transform: uppercase; }
+  .object-container .squiggle-container {
+    margin: -12px auto; }
+  .object-container .text-container {
+    background-color: transparent;
+    text-align: center;
+    color: white;
+    padding: 0 50px;
+    width: 100%; }
+
 form {
   margin-bottom: 0;
   position: relative;
