--- a/portfolio/static/css/portfolio.scss
+++ b/portfolio/static/css/portfolio.scss
@@ -7,6 +7,7 @@
 @import 'components/forms.scss';
 @import 'components/buttons.scss';
 @import 'components/images.scss';
+@import 'components/text.scss';
 
 .background-gradient {
   height: 100%;
