--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -13,11 +13,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-family: 'Overpass', sans-serif;
-
-  .header {
-    text-transform: uppercase;
-    margin-bottom: -15px;
-  }
 }
 
 .image-container {
@@ -111,15 +106,23 @@
 .summary-container {
   padding: 20px;
   background: white;
+  border-radius: 6px;
+  border: 1px solid darkblue;
 }
 
 .jumbo-container {
-  position: relative;
+  //position: relative;
+  background: #fff8fb;
+  padding-top: 50px;
 }
 
-.jumbo-image {
-  text-align: center;
-  height: 300px;
+//.jumbo-image {
+//  text-align: center;
+//  height: 300px;
+//}
+
+.detail-page-container {
+  padding: 60px 0;
 }
 
 #pear-detail-page {
@@ -129,9 +132,79 @@
     text-align: center;
     position: relative;
 
+    .squiggle-container {
+      position: absolute;
+      top: 40%;
+      left: 10%;
+    }
+
     img {
       width: 300px;
       height: auto;
+    }
+  }
+  .detail-image-container {
+    background: #fff8fb;
+    padding: 70px 0;
+    position: relative;
+
+    .squiggle-container {
+      position: absolute;
+      top: 34%;
+      left: 17%;
+    }
+
+      &:last-child{
+      padding-top: 0;
+    }
+
+    .image-container {
+      height: auto;
+      background: white;
+      padding: 10px;
+      border-radius: 6px;
+
+      img {
+        border-radius: 6px;
+      }
+
+      &.no-padding {
+        padding: 0;
+      }
+    }
+
+    .row:nth-child(2) {
+      margin-top: 30px;
+    }
+  }
+
+  .circle-container {
+    position: absolute;
+    top: 100px;
+    left: 10%;
+  }
+}
+
+#ta-detail-page {
+  .screenshot-container {
+    background: #fff8fb;
+    padding: 70px 0;
+  }
+
+  .browser-window {
+    border: 1px solid darkblue;
+    position: relative;
+
+    img{
+      position: relative;
+      z-index: 3;
+    }
+
+    .browser-bar {
+      height: 15px;
+      background: white;
+      border-bottom: 1px solid #ececec;
+      padding: 0 5px;
     }
   }
 }
