--- a/portfolio/static/css/components/_buttons.scss
+++ b/portfolio/static/css/components/_buttons.scss
@@ -1,23 +1,28 @@
-button.contact {
-  //animation: shiftTop 2s ease-in-out infinite;
+.button {
+  background: $pink;
   border-radius: 4px;
   color: white;
-  background: $pink;
   border: none;
   padding: 7px 10px;
   text-transform: uppercase;
   font-family: 'Overpass';
-}
-
-.submit-button {
-  background: #f05f5b;
-  border-radius: 4px;
-  border: none;
-  color: white;
   font-size: 12px;
-  margin-top: 10px;
-  text-transform: uppercase;
-  padding: 5px 10px;
-  font-family: 'Overpass';
-  z-index: 1000;
+
+  &.submit-button {
+    margin-top: 10px;
+    text-transform: uppercase;
+    padding: 5px 10px;
+    z-index: 1000;
+  }
+
+  &.next-button {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    z-index: 4;
+  }
+
+  &.roulette {
+    float: right;
+  }
 }
