--- a/portfolio/static/css/portfolio.css
+++ b/portfolio/static/css/portfolio.css
@@ -12,8 +12,22 @@
   50% {
     -webkit-transform: translateY(4px);
     transform: translateY(4px); } }
+.custom-fade {
+  opacity: 0;
+  transition: all 1s ease-in; }
+
+.custom-fade--inViewport {
+  opacity: 1; }
+
+@keyframes Move {
+  0% {
+    transform: translate(15px, -10px); }
+  50% {
+    transform: translate(15px, -20px); }
+  100% {
+    transform: translate(15px, -10px); } }
 .nav-list {
-  padding: 30px 50px;
+  padding: 30px 50px 8px 50px;
   margin-bottom: 0; }
   .nav-list li {
     list-style: none;
@@ -27,6 +41,11 @@
       color: #f05f5b; }
       .nav-list li a:active, .nav-list li a :hover, .nav-list li a :visited, .nav-list li a :focus {
         text-decoration: none; }
+
+.nav-link.roulette {
+  position: absolute;
+  right: 0;
+  top: 23px; }
 
 body {
   background-size: 4px 4px;
@@ -96,11 +115,11 @@ body {
     margin-top: 30px; }
     #gallery-container .row:nth-child(1) {
       margin-top: 10px; }
-
-a {
-  color: black; }
-  a:hover {
-    color: black; }
+  @media screen and (max-width: 768px) {
+    #gallery-container .col-sm-4 {
+      margin-bottom: 20px; }
+      #gallery-container .col-sm-4 .object-container {
+        background-position: 0; } }
 
 .object-container {
   padding: 100px 30px;
@@ -109,42 +128,39 @@ a {
   font-family: 'Overpass';
   background-repeat: no-repeat;
   border: 1px solid darkblue;
-  position: relative; }
-  .object-container .object-title {
-    font-size: 12px;
-    text-transform: uppercase;
-    color: #f05f5b; }
+  position: relative;
+  background-position: -400px; }
+  .object-container:hover {
+    transition: background-position 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    background-position: 0px; }
   .object-container .squiggle-container {
     margin: -12px auto; }
-  .object-container .text-container {
-    text-align: center;
-    border-radius: 6px; }
-    .object-container .text-container .desc {
-      font-size: 9px;
-      font-family: 'Overpass-italic';
-      text-transform: none;
-      margin: 5px 0 0 0;
-      color: black; }
+
+.object-title-container {
+  left: 20px;
+  margin: 0 20px;
+  transform: translateY(-50%); }
 
 .summary-container {
   padding: 20px;
+  margin-bottom: 50px;
   background: white;
   border-radius: 6px;
   border: 1px solid darkblue;
-  display: inline-block;
-  width: 33%;
-  vertical-align: middle;
-  text-align: left;
-  margin-left: 40px; }
+  text-align: left; }
+  .summary-container p {
+    margin-bottom: 0; }
 
 .jumbo-image-container {
-  display: inline-block;
-  vertical-align: middle;
-  width: 33%;
-  padding: 40px; }
+  position: relative;
+  padding: 30px;
+  min-height: 200px; }
 
 .jumbo-container {
-  text-align: center; }
+  text-align: center;
+  margin: 30px 0; }
+  .jumbo-container .squiggle-container {
+    margin: 0 0 0 auto; }
 
 .background-image {
   padding: 80px 90px 35px 75px;
@@ -152,34 +168,14 @@ a {
 
 .vertical-align {
   display: flex;
-  align-items: center; }
-
-.section-title {
-  position: relative; }
-  .section-title p {
-    position: absolute;
-    left: 125px;
-    top: -11px;
-    color: #f05f5b; }
+  align-items: center;
+  flex-wrap: wrap; }
 
 .block-title-container {
   color: #f05f5b;
   background: white;
   text-align: left;
   font-size: 12px; }
-  .block-title-container p {
-    margin: 0;
-    font-family: 'Overpass'; }
-  .block-title-container .number {
-    border-bottom: 1px solid #f05f5b;
-    margin-bottom: 5px; }
-
-.quote-container p {
-  color: #f05f5b;
-  font-family: 'Overpass';
-  font-style: italic;
-  font-weight: 300;
-  font-size: 20px; }
 
 #pear-detail-page .main-display-container {
   padding: 70px;
@@ -198,10 +194,13 @@ a {
   left: 10%; }
 
 .detail-image-container {
-  padding: 20px 0;
+  padding: 40px 0;
   position: relative; }
   .detail-image-container .row {
-    margin: 0 120px; }
+    margin: 0 120px 30px 120px; }
+  @media screen and (max-width: 992px) {
+    .detail-image-container .row {
+      margin: 0 40px 30px 40px; } }
   .detail-image-container .squiggle-container {
     position: absolute;
     top: 34%;
@@ -209,25 +208,26 @@ a {
   .detail-image-container .image-container {
     height: auto;
     background: white;
-    padding: 10px; }
-    .detail-image-container .image-container img {
-      border-radius: 6px; }
+    padding: 10px;
+    position: relative; }
     .detail-image-container .image-container.no-padding {
       padding: 0; }
-  .detail-image-container .row:nth-child(2) {
-    margin-top: 30px; }
 
 #ta-detail-page .browser-window {
   border: 1px solid darkblue;
   position: relative; }
   #ta-detail-page .browser-window img {
     position: relative;
-    z-index: 3; }
+    z-index: 3;
+    margin-top: 15px; }
   #ta-detail-page .browser-window .browser-bar {
     height: 15px;
     background: white;
     border-bottom: 1px solid #ececec;
-    padding: 0 5px; }
+    padding: 0 5px;
+    z-index: 5;
+    position: absolute;
+    width: 100%; }
 
 form {
   margin-bottom: 0;
@@ -244,6 +244,9 @@ form {
   form ::placeholder {
     color: #bcbcbc;
     font-size: 10px; }
+  form.front {
+    z-index: 4;
+    transition: all 1s ease-in; }
 
 .form-group {
   width: 150px; }
@@ -285,28 +288,25 @@ textarea.form-control, .form-group > input.form-control {
     z-index: 1000; }
   .button.next-button {
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    right: 28px;
+    bottom: 20px;
     z-index: 4; }
   .button.roulette {
     float: right; }
+
+.carousel-control.right, .carousel-control.left {
+  background-image: none;
+  opacity: 1; }
 
 .contact .section {
   background-size: cover;
   height: 400px;
   width: 100%;
   position: absolute;
-  z-index: 998; }
-
-.jumbo-image {
-  background-size: cover;
-  background-repeat: no-repeat; }
+  z-index: 1; }
 
 img.display {
   width: 100%; }
-
-.jumbo-image {
-  padding: 50px; }
 
 .rotate {
   width: 30px;
@@ -356,14 +356,11 @@ img.display {
 
 @keyframes MoveUpDown {
   0% {
-    bottom: 0;
-    left: 25%; }
+    bottom: -10px; }
   50% {
-    bottom: 100px;
-    left: 25%; }
+    bottom: -20px; }
   100% {
-    bottom: 0;
-    left: 25%; } }
+    bottom: -10px; } }
 #ta-detail-page .small-circle {
   width: 8px;
   height: 8px;
@@ -380,12 +377,11 @@ img.display {
     background-color: #90e585; }
 #ta-detail-page .browser-shadow {
   position: absolute;
-  left: -22px;
-  top: 15px;
+  left: -10px;
+  top: 10px;
   height: 100%;
   width: 100%;
-  background-size: 4px 4px;
-  background-image: linear-gradient(-45deg, #f1c3c2 25%, transparent 25%, transparent 50%, #f1c3c2 50%, #f1c3c2 38%, transparent 48%, transparent); }
+  border: 1px solid #f05f5b; }
 
 .line {
   border-top: 1px solid darkblue;
@@ -405,8 +401,8 @@ img.display {
   height: 100px;
   position: absolute;
   background: #f05f68;
-  left: 170px;
-  top: 17px; }
+  left: -30px;
+  top: -6px; }
 
 img.circle-text.rotate {
   position: absolute;
@@ -415,6 +411,12 @@ img.circle-text.rotate {
   border: none;
   height: 100px;
   width: 100px; }
+
+.jumbo-image-container > img {
+  position: absolute;
+  height: 275px;
+  left: 90px;
+  animation: Move 5s cubic-bezier(0.39, 0.58, 0.57, 1) infinite; }
 
 .subtitle {
   color: #f05f5b;
@@ -439,8 +441,57 @@ img.circle-text.rotate {
     left: 0; }
 
 .header {
+  text-align: left;
   text-transform: uppercase;
   margin-bottom: -15px; }
+
+.detail-header {
+  text-align: left;
+  line-height: 1;
+  color: #f05f5b;
+  padding-left: 15%;
+  font-family: 'Overpass';
+  font-size: 52px; }
+  .detail-header.dark {
+    color: darkblue; }
+
+a {
+  color: black; }
+  a:hover {
+    color: black; }
+
+.object-title {
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #f05f5b;
+  max-width: 200px; }
+
+.desc {
+  font-size: 9px;
+  font-family: 'Overpass-italic';
+  text-transform: none;
+  margin: 0;
+  color: black; }
+
+.section-title p {
+  position: absolute;
+  left: -60px;
+  top: -35px;
+  color: #f05f5b; }
+
+.quote-container > p {
+  color: #f05f5b;
+  font-family: 'Overpass';
+  font-style: italic;
+  font-weight: 300;
+  font-size: 20px; }
+
+.block-title-container p {
+  margin: 0;
+  font-family: 'Overpass'; }
+.block-title-container .number {
+  border-bottom: 1px solid #f05f5b;
+  margin-bottom: 5px; }
 
 .background-gradient {
   height: 100%;
