--- a/portfolio/static/css/portfolio.scss
+++ b/portfolio/static/css/portfolio.scss
@@ -1,6 +1,7 @@
 @import 'modules/variables.scss';
 @import 'modules/functions.scss';
 @import 'modules/mixins.scss';
+@import 'modules/transitions.scss';
 
 @import 'components/tabs.scss';
 @import 'components/containers.scss';
