--- a/portfolio/static/css/components/_buttons.scss
+++ b/portfolio/static/css/components/_buttons.scss
@@ -17,12 +17,17 @@
 
   &.next-button {
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    right: 28px;
+    bottom: 20px;
     z-index: 4;
   }
 
   &.roulette {
     float: right;
   }
+}
+
+.carousel-control.right, .carousel-control.left {
+  background-image: none;
+  opacity: 1;
 }
