--- a/portfolio/static/css/components/_tabs.scss
+++ b/portfolio/static/css/components/_tabs.scss
@@ -1,5 +1,5 @@
 .nav-list{
-  padding: 30px 50px;
+  padding:   30px 50px 8px 50px;
   margin-bottom: 0;
 
   li {
@@ -21,4 +21,10 @@
       }
     }
   }
+}
+
+.nav-link.roulette {
+  position: absolute;
+  right: 0;
+  top: 23px;
 }
