--- a/portfolio/static/css/components/_buttons.scss
+++ b/portfolio/static/css/components/_buttons.scss
@@ -22,6 +22,13 @@
     z-index: 4;
   }
 
+  &.back-button {
+    z-index: 4;
+    position: absolute;
+    left: 28px;
+    bottom: 20px;
+  }
+
   &.roulette {
     float: right;
   }
