--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -105,7 +105,7 @@ body {
   background-repeat: no-repeat;
   border: 1px solid darkblue;
   position: relative;
-  background-position: -400px;
+  background-position: -325px;
 
   &:hover {
     transition: background-position .4s cubic-bezier(.19,1,.22,1);
@@ -151,11 +151,6 @@ body {
   }
 }
 
-.background-image {
-  padding: 80px 90px 35px 75px;
-  position: relative;
-}
-
 .vertical-align {
   display: flex;
   align-items: center;
@@ -167,31 +162,6 @@ body {
   background: white;
   text-align: left;
   font-size: 12px;
-}
-
-#pear-detail-page {
-  .main-display-container {
-    padding: 70px;
-    text-align: center;
-    position: relative;
-
-    .squiggle-container {
-      position: absolute;
-      top: 40%;
-      left: 10%;
-    }
-
-    img {
-      width: 300px;
-      height: auto;
-    }
-  }
-
-  .circle-container {
-    position: absolute;
-    top: 100px;
-    left: 10%;
-  }
 }
 
 .detail-image-container {
@@ -226,26 +196,35 @@ body {
   }
 }
 
-#ta-detail-page {
+.browser-window {
+  border: 1px solid darkblue;
+  position: relative;
 
-  .browser-window {
-    border: 1px solid darkblue;
+  img{
     position: relative;
+    z-index: 3;
+    margin-top: 15px;
+  }
 
-    img{
-      position: relative;
-      z-index: 3;
-      margin-top: 15px;
-    }
+  .browser-bar {
+    height: 15px;
+    background: white;
+    border-bottom: 1px solid #ececec;
+    padding: 0 5px;
+    z-index: 5;
+    position: absolute;
+    width: 100%;
+  }
+}
 
-    .browser-bar {
-      height: 15px;
-      background: white;
-      border-bottom: 1px solid #ececec;
-      padding: 0 5px;
-      z-index: 5;
-      position: absolute;
-      width: 100%;
-    }
+@media screen and (max-width: 768px){
+ .detail-image-container .image-container {
+    margin-top: 20px;
+  }
+}
+
+.col-sm-12 {
+  .image-container {
+    margin-top: 20px;
   }
 }
