--- a/portfolio/static/css/components/_images.scss
+++ b/portfolio/static/css/components/_images.scss
@@ -151,3 +151,7 @@ img.circle-text.rotate {
   left: 90px;
   animation: Move 5s cubic-bezier(0.39, 0.58, 0.57, 1) infinite;
 }
+
+#illustrations-detail-page .image-container:nth-child(2) {
+  margin-top: 20px;
+}
