fixed image position for smaller screens

--- a/portfolio/static/css/components/_containers.scss
+++ b/portfolio/static/css/components/_containers.scss
@@ -90,7 +90,7 @@ body {
     .col-sm-4 {
       margin-bottom: 20px;
 
-      .object-container {
+      .sub-container {
         background-position: 0;
       }
     }
